<resources>
    <string name="app_name">InzV2</string>
    <string name="action_settings">Settings</string>
    <string name="registrationText">Wpisz login i hasło aby\n spersonalizować aplikację</string>
    <string name="registrationPassword">Hasło</string>
    <string name="registrationLogin">Login</string>
    <string name="registrationButtonText">Załóż konto</string>
    <string name="wrongUserData">Wpisz poprawne dane</string>
    <string name="correctUserData">Poprawne dane, sparuj urządzenia</string>
    <string name="loginText">Wpisz login i hasło</string>
    <string name="loginButtonText">Zaloguj</string>
    <string name="button_scanner">Skanuj w poszukiwaniu urzadzen</string>
    <string name="ble_not_supported">bluetooth low energy niewspierany</string>

    <string name="new_user_into_db">Konto zostało spersonalizowane</string>
    <string name="new_user_error_db">Konto zostało spersonalizowane</string>
    <string name="wrong_user_login_data">Błędny login lub hasło</string>
    <string name="logged">Logowanie</string>
    <string name="toolBarUser">Menu</string>
    <string name="userMenu">Poziom zasobów</string>
    <string name="userMap">Map</string>
    <string name="notfoundDevice">Nie znaleziono urządzenia</string>
    <string name="searchingDevices">Logowanie i łączenie z urządzeniem</string>
    <string name="ammoCalibration">Kalibracja czujników amunicji</string>
    <string name="ammoCalibrationDialog1">Czy w magazunku jest:</string>
    <string name="ammoCalibrationDialog2"> sztuk naboi?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="notCalibrationed">Brak kalibracji</string>
    <string name="waterCalibration">Kalibracja czujników cieczy</string>
    <string name="userReport">Raport</string>
    <string name="waterVerticalCalibrationText">Ustaw urządzenie pionowo</string>
    <string name="setVerticalSensor">Ustaw urządzenie pionowo</string>
    <string name="waterHorizontalCalibrationText">Ustaw urządzenie poziomo</string>
    <string name="setHorizontalSensor">Ustaw urządzenie poziomo</string>
    <string name="detailsAmmoLevel">Przy obecnym zuzyciu, amunicji starczy do:</string>
    <string name="detailsWaterLevel">Przy obecnym zuzyciu, wody starczy do:</string>
    <string name="clearDb">Usun dane z bazy</string>
    <string name="close">Zamknij</string>
    <string name="ammoAlert1">Niski poziom amunicji w magazynku, zostało </string>
    <string name="ammoAlert2">szt.</string>
    <string name="waterAlert1">Niski poziom wody w zasobniku, zostało</string>
    <string name="waterAlert2">% wody.</string>
    <string name="report1">Stan amunicji i wody z:</string>
    <string name="report2">Zasoby wody:</string>
    <string name="report3">Zaosby amunicji:</string>
    <string name="createReportCorrect">Raport został wygenerowany</string>
    <string name="createReportError">Błąd podczas generowania raportu</string>
    <string name="ammoSource">Wybierz sensor z którego chcesz odczytywać poziom amunicji</string>
    <string name="distance">Czujnik odległości</string>
    <string name="tenso">Belka tensometryczna</string>
    <string name="ammoNotCalibrationed">Czujniki amunicji nieskalibrowane</string>
    <string name="waterNotCalibrationed">Czujniki poziomu cieczy nieskalibrowane</string>
    <string name="ammoText1">Ilość pozostałych naboi:</string>
    <string name="ammoText2">szt. naboi.</string>
    <string name="WaterText1">Zasobnik jest pelny w około:</string>
    <string name="water0percent">0%</string>
    <string name="water10percent">10%</string>
    <string name="water35percent">35%</string>
    <string name="water65percent">65%</string>
    <string name="water80percent">80%</string>
    <string name="water100percent">100%</string>
    <string name="waterError">Błędny odczyt</string>

    <string name="ammoText3"></string>
    <string name="waterfull">Pełny zasobnik</string>
    <string name="emptyWaterBag">Uwaga! Pusty zasobnik</string>
    <string name="postionText">Status pionowego ułożenia modułu</string>
    <string name="calibrationFinishText">Naciśnij przycisk, aby zakończyć kalibracje</string>
    <string name="calibrationFinish">Czujniki skalibrowane</string>
</resources>
