<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:weightSum="8">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/registrationText"
        android:textColor="@color/black"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/loginRegistrationInputText"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/registrationLogin"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/black"/>

    <EditText
        android:id="@+id/loginRegistrationInputPassword"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/registrationPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/black"
        />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/registrationButtonText"
        android:layout_gravity="center"
        style="@style/button"
        android:background="@drawable/button_background"
        />

    <View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_gravity="end" />



</LinearLayout>
