<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="11"
    android:background="@drawable/bg"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/waterCalibrationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/waterVerticalCalibrationText"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/positionVerticalImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
           />


    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:weightSum="5"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="2"
            android:weightSum="2"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/waterCalibrationLevelText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/WaterText1"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/waterCalibrationLevel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>

        </LinearLayout>




        <ImageView
            android:id="@+id/waterCalibrationImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_gravity="center"
             />



    </LinearLayout>


    <TextView
        android:id="@+id/empty2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/calibrationFinishText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/calibrationFinishText"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/CalibrationFinishButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"/>

    </LinearLayout>



</LinearLayout>
