<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:weightSum="10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/positionText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/postionText"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/positionImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/waterLevelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/waterLevelPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/notCalibrationed"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </LinearLayout>



        <ImageView
            android:id="@+id/waterLevelImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/camelbak_0"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ammoLevelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ammoText3"
                android:textColor="@color/white"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/ammoLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/notCalibrationed"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/ammoLevelImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/magazynek_empty"
            />

    </LinearLayout>






</LinearLayout>
